# game-of-life

./: CMakeLists.txt  main.cpp
src/: Cell.cpp  Cell.h  GameController.cpp  GameController.h  Grid.cpp  Grid.h  GridSize.cpp  GridSize.h  main.cpp
src/game_of_life/: Cell.cpp  Cell.h  GameController.cpp  GameController.h  GoLConfig.cpp  GoLConfig.h  GoLController.cpp  GoLController.h  GoLService.cpp  GoLService.h  GoLView.cpp  GoLView.h
src/game_of_life/data/: GoLDataProvider.cpp  GoLDataProvider.h  GoLInvalidCellCoordinateXException.cpp  GoLInvalidCellCoordinateXException.h  GoLInvalidCellCoordinateYException.cpp  GoLInvalidCellCoordinateYException.h  GoLInvalidGridHeightException.cpp  GoLInvalidGridHeightException.h  GoLInvalidGridWidthException.cpp  GoLInvalidGridWidthException.h  GoLRepeatedCoordinatesException.cpp  GoLRepeatedCoordinatesException.h
src/game_of_life/logic/: GoLService.cpp  GoLService.h
src/game_of_life/logic/neighborhood/: GoLNeighborhoodCalculator.h
src/game_of_life/logic/neighborhood/neighborhoods/: MooreNeighborhood.cpp  Neighborhood.cpp
src/game_of_life/neighborhood/: CornerNeighborhood.cpp  CornerNeighborhood.h  EdgeNeighborhood.h  GoLNeighborhoodCalculator.cpp  GoLNeighborhoodCalculator.h  MooreNeighborhood.h  Neighborhood.cpp  Neighborhood.h  NeighborhoodCalculator.cpp  NeighborhoodCalculator.h
src/game_of_life/neighborhood/neighborhoods/: Neighborhood.cpp  Neighborhood.h
src/game_of_life/view/: GoLView.h
src/lib/: Grid.cpp  Grid.h  GridSize.cpp  GridSize.h  Simulator.cpp  Simulator.h
src/neighborhood/: CornerNeighborhood.cpp  CornerNeighborhood.h  EdgeNeighborhood.cpp  EdgeNeighborhood.h  MooreNeighborhood.cpp  MooreNeighborhood.h  Neighborhood.cpp  Neighborhood.h  NeighborhoodCalculator.cpp  NeighborhoodCalculator.h
